# mdwiki.toolforge.org

./: .bash_profile  .coderabbit.yaml  .gitignore  .gitmodules  .pylintrc  CLAUDE.md  README.md  STATIC_ANALYSIS_REPORT.md  conf.json  findqids.sh  generate-key.php  mdwiki-jobs.yaml  mdwiki-jobs.yaml.list  medwiki.sh  old_mdwiki-jobs.yaml  pyproject.toml  setuppy.sh  sweep.yaml  test_helpers.py  update_api.sh  update_mdcore.sh  update_td.sh  uuu.py  ux.py
TDpynew/: mdapi.py  mdd.py  ref.py  text_changes.py  translate.py  txtlib2.py  user_account_new.py
c9/: logger_config.py  pwb.py  requirements.txt  user_conf.py
jobs/: cach_jobs.sh  ch.sh  copy_to_medwiki.sh  count_refs_words.sh  countref.sh  databasebackup.sh  db_backup.sh  db_backup_gzip.sh  fix_refs.sh  radiocount.sh  rmc.sh  webservice.sh
md_core/: __init__.py  fixnew.py  getall2.py  update_mdcore.sh
medUpdater/: MedWork.py  med.py  med_work.py  test_p.py  txtlib2.py
nccommons/: com.py
newupdater/: MedWorkNew.py  bot_params.py  chembox.py  drugbox.py  med.py  medask.py  mv_section.py  resources_new.py  test_MedWorkNew.py  test_med.py  user_account_new.py
public_html/: 404.php  api.php  db404.php  dup.php  dup.sh  fix_duplicate.sh  fixred.php  fixref.php  fixwikirefs.php  fixwikirefs1.php  footer.php  foter.php  header.php  headertest.php  import-history.php  index.php  index_x.php  mdwiki3.php  mdwiki4.php  mdwiki5.php  oauth.php  post.php  py.sh  py1.sh  python.php  q.php  qdel.php  redirect.php  redirect1.php  replace-log.php  replace.php  toolinfo.json  tt.php  update_md.php  update_md.sh  updater.php  (+7 more)
(+708 files in other folders)
