[tool.black]
line-length = <desired_line_length>
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
